// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-posinset={2}
  className="pickerRow container align-items-center"
  role="option"
>
  <div
    className="flexCell cell size-36 padding-12 padding-left-12 align-widgets-top"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly with extra props 1`] = `
<div
  aria-posinset={2}
  aria-selected={true}
  className="uui-focus pickerRow container -clickable align-items-center"
  onClick={[Function]}
  role="option"
>
  <div
    className="flexCell cell size-48 padding-24 padding-left-24 align-widgets-top"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
      <div
        className="iconWrapper"
      >
        <div
          className="container uui-icon uui-enabled root color-sky"
          style={Object {}}
        >
          <SvgrURL
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
